--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,68 @@
+/* HEAD */
+
 @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
 
 * {
     box-sizing: border-box;
 }
+
+/* BODY */
+
+body {
+    font-family: "Ropa Sans";
+    max-width: 697px;
+    margin: 0 auto;
+    width: 100%;
+    line-height: 27px;
+    border: .5px solid #8888888e;
+    font-size: 25px;
+}
+
+/* HEADER */
+
+header {
+    padding: 16px 45px;
+    border-bottom: .5px solid #8888888e;
+}
+
+#icone-menu {
+    margin-left: 480px;
+}
+
+/* MAIN */
+
+main {
+    padding: 16px 45px;
+}
+
+section .produtos-esquerda, .produtos-direita {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.produtos {
+    text-align: justify;
+}
+
+.produtos-direita {
+    margin-left: 90px;
+}
+
+.descricao {
+    background-color: #EEEEEE;
+    padding: 12px;
+    max-width: 232px;
+    max-height: 120px;
+    font-size: 16px;
+    overflow: hidden;
+    margin: 16px;
+}
+
+.preco {
+    color: #888888;
+}
+
+/* FOOTER */
 
 .copyrights {
     background-color: #333333;
@@ -19,24 +79,6 @@
     margin-left: 140px;
 }
 
-body {
-    font-family: "Ropa Sans";
-    max-width: 697px;
-    margin: 0 auto;
-    width: 100%;
-    line-height: 27px;
-    border: .5px solid #8888888e;
-}
-
 .social-media img {
     padding-right: 10px;
 }
-
-header {
-    padding: 16px 45px;
-}
-
-#icone-menu {
-    margin-left: 100px;
-}
-
